src/ghost-cleaner/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-cleaner
  namespace: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-cleaner
  template:
    metadata:
      labels:
        app: ghost-cleaner
    spec:
      containers:
        - name: ghost-cleaner
          image: ghost-cleaner:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
