src/ghost-cleaner/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-cleaner
  namespace: admin
spec:
  selector:
    app: ghost-cleaner
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
