src/ghost-cleaner/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ghost-cleaner
  namespace: admin
  annotations:
    kubernetes.io/ingress.class: "azure/application-gateway"
    appgw.ingress.kubernetes.io/backend-protocol: "http"
spec:
  rules:
    - http:
        paths:
          - path: /ghost-cleaner
            pathType: Prefix
            backend:
              service:
                name: ghost-cleaner
                port:
                  number: 80
